###############################################
# Setup Configuration                         #
# (.setup.cfg)                                #
# Adapted from https://github.com/pybel/pybel #
###############################################
[metadata]
name = reu_repro_py
version = 0.0.1-dev
description = Utils for iterating over files
long_description = file: README.md
long_description_content_type = text/markdown

# Project info
url = https://github.com/samar14641/reusable-reproducible-py

# Author info
author = Samar Dikshit
author_email = samard05@gmail.com
maintainer = Samar Dikshit
maintainer_email = samard05@gmail.com

# License
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only 

keywords = 
    file utils
    iterating

[options]
install_requires =
    click

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src